# funds-data-project

./: README.md  funds.db  main.py  pyproject.toml
constants/: constants.py
elt/: __init__.py
elt/base/: report_generator.py
elt/data/: __init__.py  data_loader.py  db_manager.py
elt/pipeline/: __init__.py  fund_data_pipeline.py
elt/reports/: __init__.py  performance_analyzer.py  price_reconciler.py
reports/: fund_performance_report.xlsx  price_reconciliation_report.xlsx
tests/: __init__.py
tests/elt/: __init__.py
tests/elt/data/: test_data_loader.py  test_db_manager.py
tests/elt/pipeline/: test_fund_data_pipeline.py
tests/elt/reports/: test_performance_analyzer.py  test_price_reconciler.py
utils/: date_utils.py  file_utils.py
